# mcp-server-pad

./: .gitignore  README.md  main.py  ontology.ttl  ontology.txt  pad.py  pad_openapi.json  paper_analytical_devices.py  pyproject.toml  run_api_ld.sh
openapi-ld/: About_the_Paper_Analytical_Device_Project.md  api-ld.py  ontology.ttl  openapi.json
