[project]
name = "mcp-server-pad"
version = "0.1.0"
description = "MCP server implementation for interacting with the Paper Analytical Devices (PAD) system at Notre Dame"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Chris Sweet", email = "csweet@nd.edu"},
    {name = "Priscila Saboia Moreira", email = "psaboia@nd.edu"}
]
license = {text = "MIT"}
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pillow>=11.1.0",
]
